err/munin.plone.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gocept'...
Listing './lib/python3.5/site-packages/gocept/munin'...
Compiling './lib/python3.5/site-packages/gocept/munin/client.py'...
***   File "./lib/python3.5/site-packages/gocept/munin/client.py", line 50
    print "%s.value %s" % (self.name, self.data[self.key])
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gocept.munin-0.1.egg-info'...
Listing './lib/python3.5/site-packages/munin'...
Listing './lib/python3.5/site-packages/munin/plone'...
Compiling './lib/python3.5/site-packages/munin/plone/plugins.py'...
***   File "./lib/python3.5/site-packages/munin/plone/plugins.py", line 16
    print "graph_title %s (%s)" % (self.title, self.index)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/munin.plone-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
